--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -31,15 +31,22 @@ body {
 header {
     position: relative;
     min-height: 100vh;
-  z-index: 1;
-    .overlay {
-        position: absolute;
+  // z-index: 1;
+   .overlay {
+        // position: absolute;
+        // top: 0;
+        // left: 0;
+        // width: 100%;
+        // height: 100%;
+        // background-color: rgba(0, 0, 0, 0.05);
+        // z-index: -1;
+        position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.05);
-        z-index: -1;
+        background-color: rgba(0, 0, 0, 0.2);
+        z-index: -1; 
     }
 
     .navbar {
